# StageSync

./: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: flutter-build-desktop.yml  flutter-ci.yml  flutter-mobile.yml  go-ci.yml  release.yml
stagesync-server/: .gitignore  .golangci.yml  Makefile  go.mod  go.sum
stagesync-server/cmd/corelib/: main.go
stagesync-server/cmd/server/: main.go
stagesync-server/data/: session_0521bdf8-945a-4553-8d02-5387131c39a0.json  session_0df1edf9-b6c8-4270-8c6a-732c25237572.json  session_11ed183e-4351-441a-9e7e-609aa59b85e5.json  session_163dc0cc-d592-47a9-9604-e815d39b843a.json  session_28514e29-f44d-467c-b766-20c0422c08fd.json  session_4f815f79-b812-46b0-88b7-462fd087458d.json  session_5237c669-749d-4e42-9550-9b37b8ecbc3f.json  session_61f486b5-e21b-45aa-a8db-dc31cb55a096.json  session_7584eff0-aa59-4c9f-b416-6a8b8badf7c2.json  session_93d84c31-9b3b-4b51-995a-bff4ff5da9e1.json  session_fc1e7ac7-0828-404c-a7ff-026010f0e02a.json
stagesync-server/internal/audioengine/: backend_config.go  backend_config_test.go  decoder.go  engine.go  engine_test.go  handle.go  streaming_handle.go
stagesync-server/internal/audionode/: internal_audio_node.go  talkback_sink.go
stagesync-server/internal/busengine/: router.go
stagesync-server/internal/coreserver/: server.go
stagesync-server/internal/decode/: decoder.go
stagesync-server/internal/discovery/: mdns.go
stagesync-server/internal/grid/: engine.go  engine_test.go  model.go  persistence.go
stagesync-server/internal/grpc/: auth.go  dedup.go  errmap.go  grid_handler.go  node_handler.go  session_handler.go  session_store.go  showcontrol_handler.go  showcontrol_handler_test.go
stagesync-server/internal/media/: aiff.go  audio_parse_test.go  cache.go  cache_test.go  flac.go  grpc_handler.go  httpserver.go  loudness.go  loudness_test.go  mp3.go  ogg.go  store.go  store_test.go  wav_test.go
stagesync-server/internal/midinode/: apcmini.go  apcmini_test.go  node.go
stagesync-server/internal/node/: dispatcher.go
stagesync-server/internal/peaks/: service.go  service_test.go
stagesync-server/internal/persistence/: fileio.go
stagesync-server/internal/session/: manager.go  model.go  persistence.go
stagesync-server/internal/showcontrol/: engine.go  engine_test.go  model.go  persistence.go
stagesync-server/internal/talkback/: relay.go  service.go
stagesync-server/proto/stagesync/v1/: bus.proto  common.proto  grid.proto  media.proto  node.proto  session.proto  showcontrol.proto  talkback.proto
theatre_companion_app/: AGENTS.md  README.md  ideen.md  plan-showControlRefactoring.prompt.md  pubspec.yaml
theatre_companion_app/android/: build.gradle.kts  gradle.properties
theatre_companion_app/android/app/: build.gradle.kts
theatre_companion_app/android/app/src/main/cpp/: CMakeLists.txt
theatre_companion_app/ios/Runner/: Info.plist
theatre_companion_app/ios/Runner.xcodeproj/: project.pbxproj
theatre_companion_app/lib/: main.dart
theatre_companion_app/lib/network/: network_facade.dart
theatre_companion_app/lib/network/ble/: ble_mesh_service.dart  gossip_engine.dart  windows_ble_mesh_service.dart
theatre_companion_app/lib/network/coordinator/: network_repository_weaver.dart
theatre_companion_app/lib/network/crypto/: aes_gcm_service.dart
theatre_companion_app/lib/network/db/: app_database.dart  app_database.g.dart  db_connector.dart  db_connector_native.dart  db_connector_web.dart
theatre_companion_app/lib/network/isolate/: isolate_messages.dart  network_isolate_manager.dart
theatre_companion_app/lib/network/models/: ble_packet.dart  inventory_item_crdt.dart  vector_clock.dart
theatre_companion_app/lib/network/platform/: abstract_ble_service.dart  permission_service.dart  platform_capabilities.dart  stub_ble_service.dart
theatre_companion_app/lib/network/routing/: leader_election_engine.dart  peer_registry.dart
theatre_companion_app/lib/network/server/: cloud_connect_service.dart  websocket_service.dart
theatre_companion_app/lib/showcontrol/db/: show_dao.dart  show_dao.g.dart
theatre_companion_app/lib/showcontrol/discovery/: mdns_discovery.dart
theatre_companion_app/lib/showcontrol/domain/: asset.dart  cue_params.dart  cue_trigger.dart  grid_run_state.dart  node_status.dart  patch_config.dart  playhead.dart  playhead.freezed.dart  show.dart  show.freezed.dart
theatre_companion_app/lib/showcontrol/embedded/: embedded_server.dart  embedded_server_ffi.dart  embedded_server_stub.dart
theatre_companion_app/lib/showcontrol/grpc/: stage_sync_client.dart
theatre_companion_app/lib/showcontrol/media/: media_grpc_client.dart  media_sync.dart  server_media_client.dart
theatre_companion_app/lib/showcontrol/platform/: foreground_service.dart
theatre_companion_app/lib/showcontrol/preferences/: device_preferences.dart
theatre_companion_app/lib/showcontrol/providers/: asset_silence_provider.dart  async_notifier_ext.dart  audio_node_provider.dart  (+16 more)
theatre_companion_app/lib/talkback/: mic_capture.dart  opus_encoder.dart  talkback_provider.dart
theatre_companion_app/linux/: CMakeLists.txt
theatre_companion_app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
theatre_companion_app/linux/runner/: my_application.cc
theatre_companion_app/local_packages/flutter_midi_command_linux/: pubspec.yaml
theatre_companion_app/macos/Flutter/: GeneratedPluginRegistrant.swift
theatre_companion_app/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
theatre_companion_app/macos/Runner.xcodeproj/: project.pbxproj
theatre_companion_app/native/: CMakeLists.txt  miniaudio_wrapper.c  miniaudio_wrapper.h
theatre_companion_app/test/: widget_test.dart
theatre_companion_app/web/: index.html  manifest.json
theatre_companion_app/windows/: CMakeLists.txt
theatre_companion_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
theatre_companion_app/windows/runner/: Runner.rc  main.cpp
(+131 files in other folders)
